added take while test